--- a/index.html
+++ b/index.html
@@ -1009,6 +1009,7 @@ GET /gitHubItem/_search
 
             <section>
                 <h2>Questions?</h2>
+                <img height="400" width="400" data-src="images/qrcode.png" />
             </section>
 
             <section>
